--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
     "aws-amplify": "^6.6.6",
-    "next": "14.2.10",
+    "contentlayer": "^0.3.4",
+    "date-fns": "^4.1.0",
+    "next": "^13.4.7",
+    "next-contentlayer": "^0.3.4",
     "react": "^18",
     "react-dom": "^18"
   },
