--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "^13.4.7",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwind": "^4.0.0"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
