--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "next": "^13.4.7",
     "next-contentlayer": "^0.3.4",
     "react": "^18",
-    "react-dom": "^18",
-    "tailwind": "^4.0.0"
+    "react-dom": "^18"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
@@ -25,10 +24,13 @@
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.21",
     "aws-cdk": "^2",
     "aws-cdk-lib": "^2",
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
+    "postcss": "^8.5.6",
+    "tailwindcss": "^3.4.18",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
   }
