--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@tailwindcss/postcss": "^4.1.15",
     "aws-amplify": "^6.6.6",
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
     "next": "^15.5.6",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
     "@aws-amplify/backend": "^1.5.1",
@@ -29,7 +31,6 @@
     "constructs": "^10.3.0",
     "esbuild": "^0.23.1",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.14",
     "tsx": "^4.19.0",
     "typescript": "^5.6.2"
   }
