--- a/package.json
+++ b/package.json
@@ -10,11 +10,13 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@google-analytics/data": "^5.2.1",
+    "@next/third-parties": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.15",
     "aws-amplify": "^6.6.6",
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
-    "next": "^15.5.6",
+    "next": "^16.0.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwindcss": "^4.1.15"
