--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.5.5",
+    "@next/third-parties": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.15",
     "aws-amplify": "^6.6.6",
     "contentlayer": "^0.3.4",
