--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@next/third-parties": "^16.0.1",
     "@tailwindcss/postcss": "^4.1.15",
     "aws-amplify": "^6.6.6",
+    "chart.js": "^4.5.1",
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
     "next": "^16.0.1",
