--- a/tsconfig.json
+++ b/tsconfig.json
@@ -39,7 +39,7 @@
     ".next/types/**/*.ts",
     ".contentlayer/generated",
     ".next/dev/types/**/*.ts"
-  ],
+, "src/app/components/library.jsx"  ],
   "exclude": [
     "node_modules",
     "amplify"
