--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "chart.js": "^4.5.1",
     "contentlayer": "^0.3.4",
     "date-fns": "^4.1.0",
+    "jose": "^6.1.0",
     "next": "^16.0.1",
     "react": "^18",
     "react-dom": "^18",
