--- a/package.json
+++ b/package.json
@@ -1,41 +1,24 @@
 {
-  "name": "aws-amplify-gen2",
+  "name": "simon-react",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "@aws-amplify/ui-react": "^6.5.5",
-    "@google-analytics/data": "^5.2.1",
-    "@next/third-parties": "^16.0.1",
-    "@tailwindcss/postcss": "^4.1.15",
-    "aws-amplify": "^6.6.6",
-    "chart.js": "^4.5.1",
-    "contentlayer": "^0.3.4",
-    "date-fns": "^4.1.0",
-    "jose": "^6.1.0",
-    "next": "^16.0.1",
-    "react": "^18",
-    "react-dom": "^18",
-    "tailwindcss": "^4.1.15"
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "@aws-amplify/backend": "^1.5.1",
-    "@aws-amplify/backend-cli": "^1.3.0",
-    "@types/node": "^20",
-    "@types/react": "^18",
-    "@types/react-dom": "^18",
-    "autoprefixer": "^10.4.21",
-    "aws-cdk": "^2",
-    "aws-cdk-lib": "^2",
-    "constructs": "^10.3.0",
-    "esbuild": "^0.23.1",
-    "postcss": "^8.5.6",
-    "tsx": "^4.19.0",
-    "typescript": "^5.6.2"
+    "vite": "^6.0.7"
+  },
+  "dependencies": {
+    "@tailwindcss/vite": "^4.1.17",
+    "@types/react": "^19.2.2",
+    "@vitejs/plugin-react": "^5.1.0",
+    "chart.js": "^4.5.1",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
+    "react-router-dom": "^7.9.5",
+    "tailwindcss": "^4.1.17"
   }
 }
