--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "cookie-parser": "^1.4.7",
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
+    "mongodb": "^7.0.0",
     "uuid": "^11.0.5"
   },
   "devDependencies": {
