--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,8 @@
     "dotenv": "^17.2.3",
     "express": "^4.21.2",
     "mongodb": "^7.0.0",
-    "uuid": "^11.0.5"
+    "uuid": "^11.0.5",
+    "ws": "^8.18.3"
   },
   "devDependencies": {
     "@types/node": "^24.10.0"
